# huiben-akaze-orb-

./: README.md  版本更新记录说明.txt
Server2.0/Server/: matchDestination_main.cpp  trainTemplate_main.cpp  版本更改说明.txt
Server2.0/Server/matchDestination/: hanmmingmatch.cpp  pc_huiben.cpp  pc_huiben.h
Server2.0/Server/pc_dsplib/: pc_dsplib.cpp  pc_dsplib.h  tw_tpyedef.h
Server2.0/Server/trainTemplate/: tran.cpp  tran.h
huiben/: CMakeLists.txt  c_bmp.cpp  c_bmp.h  detetcPIC_three.cpp  identifyPictures.cpp  identifyPictures.h  mkdir_io.c  mkdir_io.h
huiben/dsplib/: AKAZEConfig.h  AKAZEFeatures.cpp  AKAZEFeatures.h  hanmmingmatch.cpp  huiben.cpp  huiben.h  keypoint.hpp  nldiffusion_functions.cpp  nldiffusion_functions.h  precomp.hpp  tw_tpyedef.h
huiben/dsplib/core/: README.md  alloc.cpp  arithm.cpp  convert.cpp  copy.cpp  core_tables.cpp  matmul.cpp  matop.cpp  matrix.cpp  parallel.cpp  precomp.hpp  system.cpp  version_string.inc
huiben/dsplib/core/core/: core.hpp  core_c.h  internal.hpp  mat.hpp  operations.hpp  types_c.h  version.hpp
huiben/dsplib/img/: deriv.cpp  filter.cpp  precomp.hpp  smooth.cpp
huiben/dsplib/img/imgproc/: imgproc.hpp  types_c.h
huiben/fast_orb/: cmpteKeypoint.cpp  cmptkeypoint.h  computeDescriptors.cpp  computeDescriptors.h  fast.cpp  fast.h  gausss.cpp  gausss.h  tpyedef_orbfast.h
main_test/: CMakeLists.txt  testmain.cpp  testmain.h
